# ggpkg

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  packages.json  vcpkg.json
src/: CMakeLists.txt  Config.hpp  Package.cpp  Package.hpp  PackageManager.cpp  PackageManager.hpp  main.cpp
src/commands/: Commands.cpp  Commands.hpp  Configure.cpp  Install.cpp  List.cpp  Test.cpp  Uninstall.cpp  Update.cpp  UpdatePackages.cpp  Upgrade.cpp  UpgradeAll.cpp
src/utils/: StringHash.hpp  Utils.cpp  Utils.hpp  Utils.inl
